Ajax datepicker deleted, and moved into datepicker.js, changing all the datepicker boostrap into custom datepicker indo. might need a double check

--- a/user_admin/finance_laporanKeuangan.html
+++ b/user_admin/finance_laporanKeuangan.html
@@ -316,7 +316,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                 <h4 class="vertical-align" style="margin-bottom: 20px;">Laporan Keuangan</h4>
                                 <div class="col-lg-3 col-sm-4" style="padding:unset;margin-bottom: 20px;">
                                     <div class="input-group date">
-                                        <input type="text" class="form-control" readonly="" placeholder="Select date" id="kt_datepicker_2" name="customer_lahir">
+                                        <input type="text" class="form-control" readonly="" placeholder="Pilih Tanggal" id="kt_datepicker" name="tanggal">
                                         <div class="input-group-append">
                                             <span class="input-group-text">
                                                 <i class="la la-calendar-check-o"></i>
@@ -570,11 +570,11 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--end::Global Theme Bundle -->
 
 		<!--begin::Page Vendors(used by this page) -->
-		<script src="assets/js/pages/crud/forms/widgets/bootstrap-datepicker.js" type="text/javascript"></script>
 
 		<!--end::Page Vendors -->
 
 		<!--begin::Page Scripts(used by this page) -->
+		<script src="assets/js/custom/datepicker.js" type="text/javascript"></script>
 
 		<!--end::Page Scripts -->
 	</body>
