--- a/user_admin/finance_pengeluaran.html
+++ b/user_admin/finance_pengeluaran.html
@@ -526,6 +526,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
 		<!--begin::Page Scripts(used by this page) -->
         <script src="assets/js/script/ajax.js"></script>
+		<script src="assets/js/custom/datepicker.js" type="text/javascript"></script>
 
 		<script>
 		   // Form Validation
