--- a/user_admin/listTreatment_detail_paid.html
+++ b/user_admin/listTreatment_detail_paid.html
@@ -458,7 +458,7 @@ License: You must have a valid license purchased only from themeforest(the above
 	                                        </div>
 	                                        <div class="modal-footer" style="justify-content:center;">
 	                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-	                                            <button type="submit" class="btn btn-success" id="kt_sweetalert_berhasil">Submit</button>
+	                                            <button type="submit" class="btn btn-success" id="kt_sweetalert_berhasil_complaint">Submit</button>
 	                                        </div>
 										</form>
                                     </div>
@@ -542,7 +542,6 @@ License: You must have a valid license purchased only from themeforest(the above
 
 		<!--begin::Page Scripts(used by this page) -->
 		<script src="assets/js/script/ajax.js"></script>
-		<!-- <script src="assets/js/pages/crud/forms/widgets/bootstrap-datepicker.js" type="text/javascript"></script> -->
 
 
 		<script>
@@ -594,6 +593,17 @@ License: You must have a valid license purchased only from themeforest(the above
 			   submitHandler: function(form) {
 				   //form[0].submit(); // submit the form
 			   }
+		   });
+
+		   //Sweetalert
+		   $('#kt_sweetalert_berhasil_complaint').click(function(e) {
+			   swal.fire({
+				   title: "Berhasil",
+				   text: "Complaint berhasil ditambahkan",
+				   type: "success",
+				   confirmButtonText: "Ok",
+				   confirmButtonClass: "btn btn-brand"
+			   });
 		   });
 
 		</script>
