--- a/user_superadmin/treatment_active.html
+++ b/user_superadmin/treatment_active.html
@@ -28,6 +28,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--end::Fonts -->
 
 		<!--begin::Page Vendors Styles(used by this page) -->
+		<link href="assets/plugins/custom/datatables/datatables.bundle.css" rel="stylesheet" type="text/css">
 
 		<!--end::Page Vendors Styles -->
 
@@ -338,8 +339,54 @@ License: You must have a valid license purchased only from themeforest(the above
 						<!-- begin:: Content -->
 						<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
 
+							<div class="row row-centered">
 
+								<div class="col-12">
 
+                                    <!--begin::Portlet-->
+									<div class="kt-portlet">
+										<div class="kt-portlet__head">
+											<div class="kt-portlet__head-label">
+												<span class="kt-portlet__head-icon">
+													<i class="flaticon2-cube-1"></i>
+												</span>
+												<h3 class="kt-portlet__head-title">
+													Active Treatments
+												</h3>
+											</div>
+										</div>
+										<div class="kt-portlet__body">
+
+                                            <!--begin: Search Form -->
+                                            <form class="kt-form kt-form--fit kt-margin-b-10">
+    											<div class="row" style="justify-content:space-between;">
+													<div class="col-4 input-daterange input-group" id="kt_datepicker">
+														<input readonly type="text" class="form-control kt-input" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu"/>
+														<div class="input-group-append">
+															<span class="input-group-text">
+																<i class="la la-calendar"></i>
+															</span>
+														</div>
+													</div>
+													<div class="col-4">
+	    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
+													</div>
+    											</div>
+    										</form>
+
+                                            <!-- end: Search Form -->
+
+                                            <table class="table table-striped- table-bordered table-hover table-checkable" id="table_treatment_active"></table>
+
+        									<!--end: Datatable -->
+										</div>
+									</div>
+
+									<!--end::Portlet-->
+								</div>
+							</div>
+
+							<!--end::Modal-->
 						</div>
 
 						<!-- end:: Content -->
@@ -409,215 +456,14 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--end::Global Theme Bundle -->
 
 		<!--begin::Page Vendors(used by this page) -->
+		<script src="assets/plugins/custom/datatables/datatables.bundle.js" type="text/javascript"></script>
 
 		<!--end::Page Vendors -->
 
 		<!--begin::Page Scripts(used by this page) -->
+		<script src="assets/js/script/datatable_superadmin.js"></script>
 		<script src="assets/js/custom/datepicker.js" type="text/javascript"></script>
 
-		<script>
-			// Select2
-			function formatRepo(repo) {
-	            if (repo.loading) return repo.text;
-	            var markup = "<div class='select2-result-repository clearfix'>" +
-	                "<div class='select2-result-repository__meta'>" +
-	                "<div class='select2-result-repository__title'>" + repo.full_name + "</div>";
-	            if (repo.description) {
-	                markup += "<div class='select2-result-repository__description'>" + repo.description + "</div>";
-	            }
-	            markup += "<div class='select2-result-repository__statistics'>" +
-	                "<div class='select2-result-repository__forks'><i class='fa fa-flash'></i> " + repo.forks_count + " Forks</div>" +
-	                "<div class='select2-result-repository__stargazers'><i class='fa fa-star'></i> " + repo.stargazers_count + " Stars</div>" +
-	                "<div class='select2-result-repository__watchers'><i class='fa fa-eye'></i> " + repo.watchers_count + " Watchers</div>" +
-	                "</div>" +
-	                "</div></div>";
-	            return markup;
-	        }
-
-	        function formatRepoSelection(repo) {
-	            return repo.full_name || repo.text;
-	        }
-
-			$("#kt_select2_treatment_customer_nama").select2({
-	            placeholder: "Nama",
-			    multiple: true,
-			    maximumSelectionSize: 1,
-	            allowClear: true,
-	            ajax: {
-	                url: "source/customer.json",
-	                dataType: 'json',
-			        type: "GET",
-	                delay: 250,
-	                data: function(params) {
-	                    return {
-	                        q: params.term, // search term
-	                        page: params.page
-	                    };
-	                },
-	                processResults: function(data, params) {
-	                    // parse the results into the format expected by Select2
-	                    // since we are using custom formatting functions we do not need to
-	                    // alter the remote JSON data, except to indicate that infinite
-	                    // scrolling can be used
-	                    params.page = params.page || 1;
-
-						return {
-			                results: $.map(data, function (item) {
-			                    return {
-			                        text: item.nama+', '+item.alamat,
-			                        id: item.no
-			                    }
-			                })
-			            };
-	                },
-	                cache: true
-	            },
-	            escapeMarkup: function(markup) {
-	                return markup;
-	            }, // let our custom formatter work
-	            minimumInputLength: 1
-	            // templateResult: formatRepo, // omitted for brevity, see the source of this page
-	            // templateSelection: formatRepoSelection // omitted for brevity, see the source of this page
-	        });
-
-			// Sweetalert
-			$('#kt_sweetalert_berhasil').click(function(e) {
-				swal.fire({
-					title: "Berhasil",
-					text: "Treatment berhasil ditambahkan.",
-					type: "success",
-					confirmButtonText: "Ok",
-					confirmButtonClass: "btn btn-brand"
-				}).then(function(result) {
-					// location.reload();
-				});
-			});
-
-			$('#kt_sweetalert_berhasil_modal').click(function(e) {
-				swal.fire({
-					title: "Berhasil",
-					text: "Pelanggan berhasil ditambahkan.",
-					type: "success",
-					confirmButtonText: "Ok",
-					confirmButtonClass: "btn btn-brand"
-				});
-			});
-
-			// Toastr
-			$('#showtoast').click(function() {
-				toastr.options = {
-					"closeButton": false,
-					"debug": false,
-					"newestOnTop": false,
-					"progressBar": false,
-					"positionClass": "toast-top-right",
-					"preventDuplicates": false,
-					"onclick": null,
-					"showDuration": "300",
-					"hideDuration": "1000",
-					"timeOut": "2500",
-					"extendedTimeOut": "1000",
-					"showEasing": "swing",
-					"hideEasing": "linear",
-					"showMethod": "fadeIn",
-					"hideMethod": "fadeOut"
-				}
-				toastr.info("Persetujuan terkirim");
-			});
-
-			$('#showtoast').click(function() {
-				toastr.options = {
-					"closeButton": false,
-					"debug": false,
-					"newestOnTop": false,
-					"progressBar": false,
-					"positionClass": "toast-top-right",
-					"preventDuplicates": false,
-					"onclick": null,
-					"showDuration": "300",
-					"hideDuration": "1000",
-					"timeOut": "2500",
-					"extendedTimeOut": "1000",
-					"showEasing": "swing",
-					"hideEasing": "linear",
-					"showMethod": "fadeIn",
-					"hideMethod": "fadeOut"
-				}
-				toastr.success("Persetujuan diterima");
-			});
-
-			$('#showtoast').click(function() {
-				toastr.options = {
-					"closeButton": false,
-					"debug": false,
-					"newestOnTop": false,
-					"progressBar": false,
-					"positionClass": "toast-top-right",
-					"preventDuplicates": false,
-					"onclick": null,
-					"showDuration": "300",
-					"hideDuration": "1000",
-					"timeOut": "2500",
-					"extendedTimeOut": "1000",
-					"showEasing": "swing",
-					"hideEasing": "linear",
-					"showMethod": "fadeIn",
-					"hideMethod": "fadeOut"
-				}
-				toastr.error("Persetujuan ditolak");
-			});
-
-			// Form Validation
-			$("#kt_form_1").validate({
-	            // define validation rules
-	            rules: {
-	                treatment_customer_nohp: {
-	                    required: true,
-	                    digits: true
-	                },
-	                treatment_customer_nama: {
-	                    required: true
-	                }
-	            },
-
-	            invalidHandler: function(event, validator) {
-	                KTUtil.scrollTop();
-	            },
-	            submitHandler: function(form) {
-	                //form[0].submit(); // submit the form
-	            }
-        	});
-
-			$("#kt_form_2").validate({
-	            // define validation rules
-	            rules: {
-					customer_nama : {
-						required: true
-					},
-					customer_lahir : {
-						required: true
-					},
-					customer_nohp : {
-						required: true,
-						digits: true
-					},
-					customer_email : {
-						required: true,
-						email: true
-					},
-					customer_alamat : {
-						required: true
-					}
-	            },
-
-	            invalidHandler: function(event, validator) {
-	                KTUtil.scrollTop();
-	            },
-	            submitHandler: function(form) {
-	                //form[0].submit(); // submit the form
-	            }
-        	});
-		</script>
 		<!--end::Page Scripts -->
 	</body>
 
