kt form input date/month and searchall datatable col grid change

--- a/user_admin/finance_pengeluaran.html
+++ b/user_admin/finance_pengeluaran.html
@@ -335,9 +335,9 @@ License: You must have a valid license purchased only from themeforest(the above
 										<div class="kt-portlet__body">
 
                                             <!--begin: Search Form -->
-                                            <form class="kt-form kt-form--fit kt-margin-b-10">
-    											<div class="row" style="justify-content:space-between;">
-													<div class="col-4 input-daterange input-group" id="kt_datepicker">
+											<form class="kt-form kt-form--fit kt-margin-b-10">
+    											<div class="row justify-space-between">
+													<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
 														<input readonly type="text" class="form-control kt-input" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu"/>
 														<div class="input-group-append">
 															<span class="input-group-text">
@@ -345,7 +345,7 @@ License: You must have a valid license purchased only from themeforest(the above
 															</span>
 														</div>
 													</div>
-													<div class="col-4">
+													<div class="col-lg-4 col-sm-6">
 	    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
 													</div>
     											</div>
