--- a/user_inventory/masterData.html
+++ b/user_inventory/masterData.html
@@ -301,9 +301,9 @@ License: You must have a valid license purchased only from themeforest(the above
 										<div class="kt-portlet__body">
 
                                             <!--begin: Search Form -->
-                                            <form class="kt-form kt-form--fit kt-margin-b-10">
-    											<div class="row" style="justify-content:space-between;">
-													<div class="col-4">
+											<form class="kt-form kt-form--fit kt-margin-b-10">
+    											<div class="row justify-end">
+													<div class="col-lg-4 col-sm-6">
 	    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
 													</div>
     											</div>
