--- a/user_superadmin/hr_karyawan_detail.html
+++ b/user_superadmin/hr_karyawan_detail.html
@@ -467,7 +467,7 @@ License: You must have a valid license purchased only from themeforest(the above
 												<div class="tab-pane" id="tab-treatment" role="tabpanel">
 													<form class="kt-form kt-form--fit kt-margin-b-10">
 		    											<div class="row justify-space-between">
-															<div class="col-4 input-daterange input-group" id="">
+															<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
 																<input readonly type="text" class="form-control kt-input" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu"/>
 																<div class="input-group-append">
 																	<span class="input-group-text">
@@ -475,7 +475,7 @@ License: You must have a valid license purchased only from themeforest(the above
 																	</span>
 																</div>
 															</div>
-															<div class="col-4">
+															<div class="col-lg-4 col-sm-6">
 			    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
 															</div>
 		    											</div>
@@ -485,7 +485,7 @@ License: You must have a valid license purchased only from themeforest(the above
 												<div class="tab-pane" id="tab-kehadiran" role="tabpanel">
 													<form class="kt-form kt-form--fit kt-margin-b-10">
 		    											<div class="row justify-space-between">
-															<div class="col-4 input-daterange input-group" id="">
+															<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
 																<input readonly type="text" class="form-control kt-input_2" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu_2"/>
 																<div class="input-group-append">
 																	<span class="input-group-text">
@@ -493,7 +493,7 @@ License: You must have a valid license purchased only from themeforest(the above
 																	</span>
 																</div>
 															</div>
-															<div class="col-4">
+															<div class="col-lg-4 col-sm-6">
 			    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
 															</div>
 		    											</div>
@@ -503,8 +503,8 @@ License: You must have a valid license purchased only from themeforest(the above
 												<div class="tab-pane" id="tab-payroll" role="tabpanel">
 													<form class="kt-form kt-form--fit kt-margin-b-10">
 		    											<div class="row">
-															<div class="col-4 input-daterange input-group" id="">
-																<input readonly type="text" class="form-control kt-input_month" name="start" placeholder="Pilih Bulan" data-col-index="1" id="kt_search_month"/>
+															<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
+																<input readonly type="text" class="form-control kt-input_month" name="start" placeholder="Pilih Bulan" data-col-index="1" id="kt_search_waktu_month"/>
 																<div class="input-group-append">
 																	<span class="input-group-text">
 																		<i class="la la-calendar"></i>
