--- a/user_admin/finance_pemasukan.html
+++ b/user_admin/finance_pemasukan.html
@@ -332,9 +332,9 @@ License: You must have a valid license purchased only from themeforest(the above
 										<div class="kt-portlet__body">
 
                                             <!--begin: Search Form -->
-                                            <form class="kt-form kt-form--fit kt-margin-b-10">
-    											<div class="row" style="justify-content:space-between;">
-													<div class="col-4 input-daterange input-group" id="kt_datepicker">
+											<form class="kt-form kt-form--fit kt-margin-b-10">
+    											<div class="row justify-space-between">
+													<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
 														<input readonly type="text" class="form-control kt-input" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu"/>
 														<div class="input-group-append">
 															<span class="input-group-text">
@@ -342,7 +342,7 @@ License: You must have a valid license purchased only from themeforest(the above
 															</span>
 														</div>
 													</div>
-													<div class="col-4">
+													<div class="col-lg-4 col-sm-6">
 	    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
 													</div>
     											</div>
@@ -446,7 +446,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--begin::Page Scripts(used by this page) -->
         <script src="assets/js/script/ajax.js"></script>
 		<script src="assets/js/custom/datepicker.js" type="text/javascript"></script>
-		
+
 		<!--end::Page Scripts -->
 	</body>
 
