--- a/user_therapist/index.html
+++ b/user_therapist/index.html
@@ -314,8 +314,8 @@ License: You must have a valid license purchased only from themeforest(the above
 
                                             <!--begin: Search Form -->
                                             <form class="kt-form kt-form--fit kt-margin-b-10">
-    											<div class="row" style="justify-content:space-between;">
-													<div class="col-4 input-daterange input-group" id="kt_datepicker">
+    											<div class="row justify-space-between">
+													<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
 														<input readonly type="text" class="form-control kt-input" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu"/>
 														<div class="input-group-append">
 															<span class="input-group-text">
@@ -323,7 +323,7 @@ License: You must have a valid license purchased only from themeforest(the above
 															</span>
 														</div>
 													</div>
-													<div class="col-4">
+													<div class="col-lg-4 col-sm-6">
 	    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
 													</div>
     											</div>
