changing ajax.js to datatable_superadmin.js

--- a/user_admin/finance_pemasukan.html
+++ b/user_admin/finance_pemasukan.html
@@ -444,7 +444,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--end::Page Vendors -->
 
 		<!--begin::Page Scripts(used by this page) -->
-        <script src="assets/js/script/ajax.js"></script>
+        <script src="assets/js/script/datatable_admin.js"></script>
 		<script src="assets/js/custom/datepicker.js" type="text/javascript"></script>
 
 		<!--end::Page Scripts -->
