--- a/user_admin/listTreatment_detail_unpaid.html
+++ b/user_admin/listTreatment_detail_unpaid.html
@@ -543,7 +543,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--end::Page Vendors -->
 
 		<!--begin::Page Scripts(used by this page) -->
-		<script src="assets/js/script/ajax.js"></script>
+		<script src="assets/js/script/datatable_admin.js"></script>
 
 		<script>
 			// Print function
