--- a/user_admin/customer.html
+++ b/user_admin/customer.html
@@ -423,7 +423,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--end::Page Vendors -->
 
 		<!--begin::Page Scripts(used by this page) -->
-        <script src="assets/js/script/ajax.js"></script>
+        <script src="assets/js/script/datatable_admin.js"></script>
 
 		<!--end::Page Scripts -->
 	</body>
