user admin laporan keuangan datepicker

--- a/user_admin/finance_laporanKeuangan.html
+++ b/user_admin/finance_laporanKeuangan.html
@@ -316,12 +316,12 @@ License: You must have a valid license purchased only from themeforest(the above
                                 <h4 class="vertical-align" style="margin-bottom: 20px;">Laporan Keuangan</h4>
                                 <div class="col-lg-3 col-sm-4" style="padding:unset;margin-bottom: 20px;">
                                     <div class="input-group date">
-                                        <input type="text" class="form-control" readonly="" placeholder="Pilih Tanggal" id="kt_datepicker" name="tanggal">
-                                        <div class="input-group-append">
-                                            <span class="input-group-text">
-                                                <i class="la la-calendar-check-o"></i>
-                                            </span>
-                                        </div>
+										<input readonly type="text" class="form-control kt-input" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu"/>
+										<div class="input-group-append">
+											<span class="input-group-text">
+												<i class="la la-calendar"></i>
+											</span>
+										</div>
                                     </div>
                                 </div>
 							</div>
