--- a/user_therapist/treatment_detail_ongoing.html
+++ b/user_therapist/treatment_detail_ongoing.html
@@ -337,14 +337,14 @@ License: You must have a valid license purchased only from themeforest(the above
         									<!--end: Datatable -->
 											<div class="row" style="margin-top:50px;">
 												<div class="col-6" style="padding-right:0px; position: relative;">
-		                                            <table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px; position: absolute;">
+													<table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px; position: absolute;">
 		                                                <tr>
-		                                                    <th width="30%">Waktu Mulai</th>
+		                                                    <th width="35%">Waktu Mulai</th>
 		                                                    <th width="10%">:</th>
-		                                                    <th width="60%"style="font-weight:500;" name="waktu_mulai">08.00 WITA</th>
+		                                                    <th width="55%"style="font-weight:500;" name="waktu_mulai">08.00 WITA</th>
 		                                                </tr>
 		                                                <tr>
-		                                                    <th>Therapist</th>
+		                                                    <th>Waktu Selesai</th>
 		                                                    <th>:</th>
 		                                                    <th style="font-weight:500;" name="waktu-selesai">10.00 WITA</th>
 		                                                </tr>
