--- a/user_therapist/complaint_detail.html
+++ b/user_therapist/complaint_detail.html
@@ -18,7 +18,7 @@ License: You must have a valid license purchased only from themeforest(the above
 	<head>
 		<base href="../">
 		<meta charset="utf-8" />
-		<title>Active Treatment | Therapist Fabulash</title>
+		<title>Complaint Details | Therapist Fabulash</title>
 		<meta name="description" content="Updates and statistics">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -120,7 +120,7 @@ License: You must have a valid license purchased only from themeforest(the above
 								        <rect id="Rectangle-Copy" fill="#000000" x="6" y="15" width="5" height="2" rx="1"/>
 								    </g>
 								</svg></span><span class="kt-menu__link-text">Form Treatment</span></a></li>
-								<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_therapist/index.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item " aria-haspopup="true"><a href="user_therapist/index.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 								    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 								        <rect x="0" y="0" width="24" height="24"/>
 								        <path d="M2.56066017,10.6819805 L4.68198052,8.56066017 C5.26776695,7.97487373 6.21751442,7.97487373 6.80330086,8.56066017 L8.9246212,10.6819805 C9.51040764,11.267767 9.51040764,12.2175144 8.9246212,12.8033009 L6.80330086,14.9246212 C6.21751442,15.5104076 5.26776695,15.5104076 4.68198052,14.9246212 L2.56066017,12.8033009 C1.97487373,12.2175144 1.97487373,11.267767 2.56066017,10.6819805 Z M14.5606602,10.6819805 L16.6819805,8.56066017 C17.267767,7.97487373 18.2175144,7.97487373 18.8033009,8.56066017 L20.9246212,10.6819805 C21.5104076,11.267767 21.5104076,12.2175144 20.9246212,12.8033009 L18.8033009,14.9246212 C18.2175144,15.5104076 17.267767,15.5104076 16.6819805,14.9246212 L14.5606602,12.8033009 C13.9748737,12.2175144 13.9748737,11.267767 14.5606602,10.6819805 Z" fill="#000000" opacity="0.3"/>
@@ -140,7 +140,7 @@ License: You must have a valid license purchased only from themeforest(the above
 								        <rect fill="#000000" opacity="0.3" x="10" y="17" width="7" height="2" rx="1"/>
 								    </g>
 								</svg></span><span class="kt-menu__link-text">List Treatment</span></a></li>
-                                <li class="kt-menu__item " aria-haspopup="true"><a href="user_therapist/complaint.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+                                <li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_therapist/complaint.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 								    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 								        <rect x="0" y="0" width="24" height="24"/>
 								        <circle fill="#000000" opacity="0.3" cx="12" cy="12" r="10"/>
@@ -268,14 +268,17 @@ License: You must have a valid license purchased only from themeforest(the above
 					<div class="kt-content  kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor" id="kt_content">
 
 						<!-- begin:: Content Head -->
-						<div class="kt-subheader  kt-grid__item" id="kt_subheader">
+                        <div class="kt-subheader  kt-grid__item" id="kt_subheader">
 							<div class="kt-container  kt-container--fluid ">
 								<div class="kt-subheader__main">
 									<h3 class="kt-subheader__title">
-										Active Treatment </h3>
+										Complaint </h3>
 									<span class="kt-subheader__separator kt-hidden"></span>
 									<div class="kt-subheader__breadcrumbs">
-										<a href="user_therapist/index.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
+										<a href="user_therapist/complaint.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
+										<span class="kt-subheader__breadcrumbs-separator"></span>
+										<a href="user_therapist/complaint_detail.html" class="kt-subheader__breadcrumbs-link">
+											Complaint details </a>
 									</div>
 								</div>
 							</div>
@@ -286,52 +289,157 @@ License: You must have a valid license purchased only from themeforest(the above
 						<!-- begin:: Content -->
 						<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
 
-                            <div class="row row-centered">
+                            <div class="row justify-content-center kt-hidden">
 
-								<div class="col-12">
+								<div class="col-lg-8 col-xl-6">
 
-                                    <!--begin::Portlet-->
-									<div class="kt-portlet">
-										<div class="kt-portlet__head">
+									<!--begin::Portlet-->
+
+									<div class="kt-portlet kt-portlet--mobile" id="print-section">
+										<div class="kt-portlet__head centered-content">
 											<div class="kt-portlet__head-label">
-												<span class="kt-portlet__head-icon">
-													<i class="flaticon2-cube-1"></i>
-												</span>
 												<h3 class="kt-portlet__head-title">
-													Active Treatments
+													Treatment Details
 												</h3>
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-
-                                            <!--begin: Search Form -->
-                                            <form class="kt-form kt-form--fit kt-margin-b-10">
-    											<div class="row justify-space-between">
-													<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
-														<input readonly type="text" class="form-control kt-input" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu"/>
-														<div class="input-group-append">
-															<span class="input-group-text">
-																<i class="la la-calendar"></i>
-															</span>
+                                            <div class="row" style="margin-bottom:20px;">
+												<div class="col-6">
+	                                                <h5 class="color-main-dark" name="nomor_pesanan">#123456</h5>
+	                                                <span class="kt-font-bold" name="customer_nama">Darnilla</span>&nbsp;<br>
+	                                                <span class="kt-font-bold" name="customer_nohp">081342497228</span>&nbsp;<br>
+	                                                <span class="kt-font-bold" name="customer_alamat">Jl. Areopala 6</span>&nbsp;<br>
+												</div>
+												<div class="col-6">
+													<div class="row">
+														<div class="col-12" style="text-align: right; margin-bottom:5px;">
+															<button class="col-5 btn btn-warning" onclick="printFunction()">Print</button>
+														</div>
+														<div class="col-12" style="text-align: right; margin-bottom:5px;">
+															<button class="col-5 btn btn-brand">Foto</button>
+														</div>
+														<div class="col-12" style="text-align: right;">
+															<button class="col-5 btn btn-danger" data-toggle="modal" data-target="#kt_modal_treatment_complaint">Complaint</button>
 														</div>
 													</div>
-													<div class="col-lg-4 col-sm-6">
-	    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
-													</div>
-    											</div>
-    										</form>
+												</div>
+                                            </div>
+                                            <table class="col-sm-12 col-md-8 col-lg-6" style="margin-bottom:50px">
+                                                <tr>
+                                                    <th width="30%">Tanggal</th>
+                                                    <th width="10%">:</th>
+                                                    <th width="60%"style="font-weight:500;" name="treatment_hari">2 Oktober 2019</th>
+                                                </tr>
+                                                <tr>
+                                                    <th>Therapist</th>
+                                                    <th>:</th>
+                                                    <th style="font-weight:500;" name="treatment_therapist">Ka</th>
+                                                </tr>
+                                            </table>
 
-                                            <!-- end: Search Form -->
-
-                                            <table class="table table-striped- table-bordered table-hover table-checkable" id="table_treatment_active"></table>
+                                            <!--begin: Datatable -->
+        									<table class="table table-striped- table-bordered table-hover table-checkable" id="table_treatment_detail">
+        										<thead>
+        											<tr>
+        												<th>No.</th>
+        												<th>Treatment</th>
+        												<th>Harga</th>
+        											</tr>
+        										</thead>
+        									</table>
 
         									<!--end: Datatable -->
+                                            <div class="col-12 justify-end" style="padding: 0px 0px">
+                                                <div style="text-align:right;width:50%">
+                                                    <span class="kt-font-bold">Sub-Total :</span>&nbsp;
+    	                                            <span name="price_subTotal">Rp 550.000,00</span>&nbsp;<br>
+                                                    <span class="kt-font-bold">Diskon :</span>&nbsp;
+    	                                            <span name="price_diskon">Rp 50.000,00</span>&nbsp;<br>
+                                                    <span class="kt-font-bold">Total :</span>&nbsp;
+    	                                            <span name="price_total">Rp 500.000,00</span>&nbsp;
+                                                </div>
+                                            </div>
+											<div class="row" style="margin-top:50px;">
+												<div class="col-6" style="padding-right:0px;">
+													<table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px; position: absolute;">
+		                                                <tr>
+		                                                    <th width="35%">Waktu Mulai</th>
+		                                                    <th width="10%">:</th>
+		                                                    <th width="55%"style="font-weight:500;" name="waktu_mulai">08.00 WITA</th>
+		                                                </tr>
+		                                                <tr>
+		                                                    <th>Waktu Selesai</th>
+		                                                    <th>:</th>
+		                                                    <th style="font-weight:500;" name="waktu-selesai">10.00 WITA</th>
+		                                                </tr>
+		                                            </table>
+												</div>
+
+												<div class="col-6" style="padding-left:0px;text-align:right;">
+	                                                <span class="kt-font-bold">Tipe Complaint :</span>&nbsp;<br>
+    	                                            <span name="complaint_tipe">Eyelash Extension</span>&nbsp;<br>
+	                                                <span class="kt-font-bold">Complaint :</span>&nbsp;<br>
+    	                                            <span name="complaint_text" style="word-wrap: break-word">nama saya fiqar aprialim, saya tidak terima dengan treatment yang diberikan untuk kuku dan bulu mata saya</span>&nbsp;<br>
+												</div>
+                                            </div>
 										</div>
 									</div>
 
 									<!--end::Portlet-->
 								</div>
+
 							</div>
+
+                            <!--begin::Modal-->
+                            <div class="modal fade" id="kt_modal_treatment_complaint" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel">Complaint</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            </button>
+                                        </div>
+                                        <form id="kt_form_complaint">
+	                                        <div class="modal-body">
+                                                <div class="form-group row">
+                                                    <label for="example-text-input" class="col-4 col-form-label">Tanggal</label>
+                                                    <div class="col-8">
+                                                        <div class="input-group date">
+                                                            <input type="text" name="complaint_tanggal" class="form-control" readonly="" placeholder="Tanggal" id="kt_datepicker_modal_complaint">
+                                                            <div class="input-group-append">
+                                                                <span class="input-group-text">
+                                                                    <i class="la la-calendar-check-o"></i>
+                                                                </span>
+                                                            </div>
+                                                        </div>
+														<span class="form-text text-muted kt-hidden">Select a date</span>
+                                                    </div>
+                                                </div>
+                                                <div class="form-group row">
+                                                    <label for="example-text-input" class="col-4 col-form-label">Tipe</label>
+                                                    <div class="col-8">
+                                                        <input type="text" class="form-control" name="complaint_tipe" placeholder="Tipe">
+                                                    </div>
+                                                </div>
+                                                <div class="form-group row">
+                                                    <label for="example-text-input" class="col-4 col-form-label">Complaint</label>
+                                                    <div class="col-8">
+                                                        <textarea class="form-control" id="exampleTextarea" rows="3" name="complaint_text" placeholder="Complaint..."></textarea>
+                                                    </div>
+                                                </div>
+	                                        </div>
+	                                        <div class="modal-footer" style="justify-content:center;">
+	                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+	                                            <button type="submit" class="btn btn-success" id="kt_sweetalert_berhasil_complaint">Submit</button>
+	                                        </div>
+										</form>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!--end::Modal-->
+
 						</div>
 
 						<!-- end:: Content -->
@@ -407,7 +515,6 @@ License: You must have a valid license purchased only from themeforest(the above
 
 		<!--begin::Page Scripts(used by this page) -->
 		<script src="assets/js/script/datatable_therapist.js"></script>
-		<script src="assets/js/custom/datepicker.js" type="text/javascript"></script>
 
 		<!--end::Page Scripts -->
 	</body>
