--- a/user_inventory/stock_detail.html
+++ b/user_inventory/stock_detail.html
@@ -495,6 +495,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<script src="assets/js/script/datatable_inventory.js"></script>
 
         <script>
+			//Sweetalert
 			function swalVoid() {
 				swal.fire({
 					title: 'Tandai sebagai void?',
@@ -511,31 +512,7 @@ License: You must have a valid license purchased only from themeforest(the above
 						)
 					}
 				});
-
 			};
-
-			$("#kt_form_1").validate({
-	            // define validation rules
-	            rules: {
-	                inventory_nama: {
-	                    required: true,
-	                },
-	                inventory_satuan: {
-	                    required: true,
-	                },
-	                inventory_jumlah_satuan: {
-	                    required: true,
-	                    digits: true
-	                }
-	            },
-
-	            invalidHandler: function(event, validator) {
-	                KTUtil.scrollTop();
-	            },
-	            submitHandler: function(form) {
-	                //form[0].submit(); // submit the form
-	            }
-        	});
 		</script>
 
 		<!--end::Page Scripts -->
