lil value change on status superadmin/treatment.json and superadmin breadcrumbs

--- a/user_superadmin/hr_karyawan_detail.html
+++ b/user_superadmin/hr_karyawan_detail.html
@@ -318,18 +318,16 @@ License: You must have a valid license purchased only from themeforest(the above
 							<div class="kt-container  kt-container--fluid ">
 								<div class="kt-subheader__main">
 									<h3 class="kt-subheader__title">
-										Tabbed Subheader </h3>
+										Human Resources </h3>
 									<span class="kt-subheader__separator kt-hidden"></span>
 									<div class="kt-subheader__breadcrumbs">
-										<a href="#" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
+										<a href="user_superadmin/hr_karyawan.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
 										<span class="kt-subheader__breadcrumbs-separator"></span>
-										<a href="" class="kt-subheader__breadcrumbs-link">
-											Subheaders </a>
+										<a href="user_superadmin/hr_karyawan.html" class="kt-subheader__breadcrumbs-link">
+											Daftar Karyawan </a>
 										<span class="kt-subheader__breadcrumbs-separator"></span>
-										<a href="" class="kt-subheader__breadcrumbs-link">
-											Classic </a>
-
-										<!-- <span class="kt-subheader__breadcrumbs-link kt-subheader__breadcrumbs-link--active">Active link</span> -->
+										<a href="user_superadmin/hr_karyawan_detail.html" class="kt-subheader__breadcrumbs-link">
+											Detail Karyawan </a>
 									</div>
 								</div>
 							</div>
@@ -352,7 +350,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													<i class="flaticon2-cube-1"></i>
 												</span>
 												<h3 class="kt-portlet__head-title">
-													Karyawan
+													Detail Karyawan
 												</h3>
 											</div>
 											<div class="kt-portlet__head-toolbar">
@@ -504,7 +502,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													<form class="kt-form kt-form--fit kt-margin-b-10">
 		    											<div class="row">
 															<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
-																<input readonly type="text" class="form-control kt-input_month" name="start" placeholder="Pilih Bulan" data-col-index="1" id="kt_search_waktu_month"/>
+																<input readonly type="text" class="form-control kt-input_month" name="start" placeholder="Pilih Bulan" data-col-index="1" id="kt_search_month"/>
 																<div class="input-group-append">
 																	<span class="input-group-text">
 																		<i class="la la-calendar"></i>
