--- a/user_superadmin/finance_pengeluaran_detail.html
+++ b/user_superadmin/finance_pengeluaran_detail.html
@@ -317,18 +317,16 @@ License: You must have a valid license purchased only from themeforest(the above
 							<div class="kt-container  kt-container--fluid ">
 								<div class="kt-subheader__main">
 									<h3 class="kt-subheader__title">
-										Tabbed Subheader </h3>
+										Finance </h3>
 									<span class="kt-subheader__separator kt-hidden"></span>
 									<div class="kt-subheader__breadcrumbs">
-										<a href="#" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
+										<a href="user_superadmin/finance_pengeluaran.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
 										<span class="kt-subheader__breadcrumbs-separator"></span>
-										<a href="" class="kt-subheader__breadcrumbs-link">
-											Subheaders </a>
+										<a href="user_superadmin/finance_pengeluaran.html" class="kt-subheader__breadcrumbs-link">
+											Pengeluaran </a>
 										<span class="kt-subheader__breadcrumbs-separator"></span>
-										<a href="" class="kt-subheader__breadcrumbs-link">
-											Classic </a>
-
-										<!-- <span class="kt-subheader__breadcrumbs-link kt-subheader__breadcrumbs-link--active">Active link</span> -->
+										<a href="user_superadmin/finance_pengeluaran_detail.html" class="kt-subheader__breadcrumbs-link">
+											Detail Pengeluaran </a>
 									</div>
 								</div>
 							</div>
